Updated task that downloads remote file.